--- a/src/app/components/pages/contact-us/contact-us.component.html
+++ b/src/app/components/pages/contact-us/contact-us.component.html
@@ -13,14 +13,14 @@
     <form (submit)="handleProtectedAction($event)"
       class="d-flex flex-column justify-content-start align-items-start gap-4 w-100 mt-2">
       <!-- Name + Last Name -->
-      <div class="row w-100 justify-content-between align-items-center">
-        <div class="col-6">
+      <div class="row w-100 justify-content-between align-items-center m-0 p-0 gap-0">
+        <div class="col-6 p-0 pe-2">
           <input [(ngModel)]="formData.first_name" name="first_name" class="form-control" type="text"
             placeholder="prénom" required />
         </div>
-        <div class="col-6">
+        <div class="col-6 p-0 ps-2">
           <input [(ngModel)]="formData.last_name" name="last_name" class="form-control" type="text"
-            placeholder="nom de famille" required />
+            placeholder="famille" required />
         </div>
       </div>
 
@@ -53,4 +53,4 @@
   </div>
 </div>
 
-      <app-home-footer></app-home-footer>
+<app-home-footer></app-home-footer>
