--- a/src/app/components/pages/home/home-footer/home-footer.component.css
+++ b/src/app/components/pages/home/home-footer/home-footer.component.css
@@ -25,7 +25,7 @@
 
 .logo-section p {
     width: 100%;
-    text-align: start;
+    text-align: center;
     font-family: 'Comic Relief';
     color: white;
     font-size: 0.7rem;
