--- a/src/app/components/pages/home/characters-home/slider-characters-home/slider-characters-home.component.html
+++ b/src/app/components/pages/home/characters-home/slider-characters-home/slider-characters-home.component.html
@@ -15,7 +15,7 @@
         [style.textAlign]="'left'"
       >
         <app-carachter-card [bgIcon]="card.bgIcon" [character]="card.character"
-        [raiting]="card.raiting"></app-carachter-card>
+        [raiting]="card.raiting" [isSelected]="true" [name]="card.name"></app-carachter-card>
       </div>
     </div>
   </div>
