--- a/src/app/components/pages/home/home-games/game-card/game-card.component.html
+++ b/src/app/components/pages/home/home-games/game-card/game-card.component.html
@@ -6,7 +6,7 @@
     <img class="game-image" [src]="mainIcon" alt="icon">
 
     <!-- Start Game Button -->
-    <button class="start-game-button">
+    <button (click)="onCardClick()" class="start-game-button">
         <div class="start-home">
             <img src="images/arrow.png" alt="start">
         </div>
