--- a/src/app/components/pages/home/home-games/slider-games-home-page/slider-games-home-page.component.html
+++ b/src/app/components/pages/home/home-games/slider-games-home-page/slider-games-home-page.component.html
@@ -18,7 +18,7 @@
         <!-- Show the raiting explicitly here to ensure it appears -->
 
         <app-game-card [isSelected]="false" [mainIcon]="card.img" [title]="card.title" [raiting]="card.raiting"
-          [ngStyle]="{ '--title-align': 'left' }"></app-game-card>
+          [ngStyle]="{ '--title-align': 'left' }" [page]="card.page"></app-game-card>
       </div>
     </div>
   </div>
