--- a/src/app/components/pages/games/games.component.html
+++ b/src/app/components/pages/games/games.component.html
@@ -1,5 +1,6 @@
 <app-background></app-background>
-
+<app-stars-background class="stars"></app-stars-background>
+<app-lines-background></app-lines-background>
 <div class="container ">
   <!-- الشكل الأول (Carousel) -->
 <div class="carousel">
@@ -11,4 +12,3 @@
 </div>
 
 </div>
-
