--- a/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin-dashboard/admin-navbar/admin-navbar.component.html
@@ -1,4 +1,4 @@
-<div class="nav flex-column nav-pills min-vh-100" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+<div class="nav flex-column nav-pills min-vh-100 px-2" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 
   <div class="m-4 logo">
     <img class="img-fluid" src="images/logo-patarif.png" alt="App Logo" width="80" height="80">
@@ -7,7 +7,6 @@
 
     <a routerLink="/admin-dashboard" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
       class="nav-link">
-      <i class="bi bi-bar-chart"></i>
       <p>
         Dashboard
       </p>
@@ -15,30 +14,31 @@
 
     <a routerLink="/app-admin-orders" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
       class="nav-link">
-      <i class="bi bi-plus-circle-dotted"></i>
+      
       <p>
         Orders
       </p>
     </a>
     <a routerLink="/admin-products" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
       class="nav-link">
-      <i class="bi bi-plus-circle-dotted"></i>
+      
       <p>
         Products
       </p>
     </a> <a routerLink="/contact-messages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"
       class="nav-link">
-      <i class="bi bi-plus-circle-dotted"></i>
+      
       <p>
         Feed Back
       </p>
-    </a><a style="background-color: rgba(255, 0, 0, 0.589); color: white; cursor: pointer;" class="nav-link"
-      (click)="signOut()">
-      <i class="bi bi-plus-circle-dotted"></i>
-      <p>Logout</p>
     </a>
 
 
   </div>
-  <p style="font-size: 0.8rem">&#169;Patarif - 2022</p>
+  <a style="background-color: rgba(255, 0, 0, 0.589); color: white; cursor: pointer;" class="nav-link"
+    (click)="signOut()">
+    
+    <p>Logout</p>
+  </a>
+  <p style="font-size: 0.6rem">&#169;Patarif - 2022</p>
 </div>
