--- a/src/app/components/search-modal/search-modal.component.css
+++ b/src/app/components/search-modal/search-modal.component.css
@@ -6,17 +6,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10050;
+  z-index: 100500;
   padding: 6% 20%;
 }
 
 .search-modal {
   width: 100%;
-  height: 100%;
+  margin-top: 20%;
+  height: fit-content;
   border-radius: 12px;
   position: relative;
   box-shadow: 0 8px 28px rgba(0,0,0,0.25);
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 /* make card buttons slightly elevate on hover */
@@ -28,3 +29,35 @@
   transform: translateY(-4px);
   box-shadow: 0 8px 20px rgba(0,0,0,0.08);
 }
+
+.close{
+  z-index: inherit;
+}
+
+
+
+
+
+
+
+
+
+/* reposive */
+
+/* mobile*/
+
+@media (max-width: 480px) {
+  .search-backdrop{
+    padding: 2% 10%;
+  }
+  .search-modal{
+    /* height: 50%; */
+  }
+}
+
+/* tablet */
+
+@media (min-width: 481px) and (max-width: 1100px) {}
+
+/* laptob */
+@media (min-width: 769px) {}
