make card responsive and remove stories card

--- a/src/app/components/pages/home/categories/categories.component.html
+++ b/src/app/components/pages/home/categories/categories.component.html
@@ -22,13 +22,13 @@
   </app-category-card>
 
   <!-- Category Card for Stories Corner -->
-  <app-category-card 
+  <!-- <app-category-card 
     [bgColor]="'#FB5664'" 
     [bgIcon]="'images/storyCorenerCategory.png'"
     [mainIcon]="'images/mainStoryCorenerCategory.png'" 
     [title]="'Stories\nCorner'"
     (cardClick)="onCardClicked('storyCorner')">
-  </app-category-card>
+  </app-category-card> -->
 
   <!-- Category Card for Games Corner -->
   <app-category-card 
