--- a/src/app/components/game-template/game-template.component.html
+++ b/src/app/components/game-template/game-template.component.html
@@ -24,9 +24,8 @@
       [questionsCorrectInLevel]="questionsCorrectInLevel || 0"
       [currentQuestion]="currentQuestion || 1"
       [timeElapsed]="timeElapsed || 0"
-      [
-      difficulty]="difficulty || 'facile'"
-      [totalQuestions]="5"
+      [difficulty]="difficulty || 'facile'"
+      [totalQuestions]="totalQuestions ||  5"
     ></app-game-header>
 
     <div class="game-content" [class.no-bg]="nogamecontent">
