--- a/src/app/components/pages/home/home-games/game-card/game-card.component.css
+++ b/src/app/components/pages/home/home-games/game-card/game-card.component.css
@@ -3,7 +3,6 @@
     width: 328px;
     height: 390px;
     overflow: visible;
-    border: 1px solid green;
 }
 
 /* Background */
@@ -25,10 +24,10 @@
 .game-image {
     position: absolute;
     z-index: 1;
-    width: 100%;
+    width: 95%;
     height: auto;
     left: -55px;
-    border: 1px solid rgb(128, 0, 0);
+    bottom: 0;
 
 }
 
