near to finish players level feature

--- a/src/app/components/pages/home/categories/categories.component.css
+++ b/src/app/components/pages/home/categories/categories.component.css
@@ -12,9 +12,10 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); /* responsive columns */
-  gap: 1.5rem;
+  gap:0rem;
   padding: 1rem;
   justify-items: center;
+  align-items: center;
 }
 
 /* Card Component */
