--- a/src/app/components/pages/home/categories/category-card/category-card.component.css
+++ b/src/app/components/pages/home/categories/category-card/category-card.component.css
@@ -12,6 +12,7 @@
   z-index: 1;
   transition: transform 0.4s cubic-bezier(.7, 0, .3, 1);
   transform-origin: top center; 
+  margin: 8px;
 }
 
 .card-container:hover {
@@ -24,7 +25,6 @@
   visibility: visible;
 }
 
-/* الخلفية */
 .background-icon {
   position: absolute;
   top: 0;
