--- a/src/app/components/pages/learning/stories/tomate-story/tomate-story.component.html
+++ b/src/app/components/pages/learning/stories/tomate-story/tomate-story.component.html
@@ -143,7 +143,6 @@
                 <!-- <img class="" src="images/learningZone/stories/tomate/line.png" alt="eighth-shown"> -->
             </div>
             <div class="item A">A</div>
-            <!-- benifits -->
             <div class="story">
                 <h3>Une bombe de vitamines :</h3>
             </div>
@@ -157,66 +156,74 @@
 
 
 
+<!-- title -->
+<div id="section11" class="section benifits">
+  <h3>Les tomates<br>dynamisent le corps</h3>
 
-        <!-- title -->
-        <div id="section11" class="section benifits">
-            <h3>Les tomates<br>dynamisent le corps</h3>
-            <div class="row" style="display: flex; flex-direction: row; justify-content: center; gap: 48px;">
-                <!-- 1 -->
-                <div class="benifit benifit1 col-auto">
-                    <div class="benifit-desc">
-                        <p>Elle envoie un câlin magique à<br>ton cœur : il devient tout<br>léger ! ❤️</p>
-                    </div>
-                    <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit1.png" alt="benifit 1">
-                    </div>
-                </div>
-                <!-- 2 -->
-                <div class="benifit benifit2 col-auto">
-                    <div class="benifit-desc">
-                        <p>Elle donne de la force à tes<br>jambes: hop, en avant les bottes<br>rouges !</p>
-                    </div>
-                    <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit2.png" alt="benifit 2">
-                    </div>
-                </div>
-                <!-- 3 -->
-                <div class="benifit benifit3 col-auto">
-                    <div class="benifit-desc">
-                        <p>Elle chasse les petits nuages<br>gris de ton corps. ☁️</p>
-                    </div>
-                    <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit3.png" alt="benifit 3">
-                    </div>
-                </div>
-            </div>
+  <!-- first collection -->
+  <div class="row">
+    <!-- 1 -->
+    <div class="benifit benifit1">
+      <div class="benifit-desc">
+        <p>Elle envoie un câlin magique à<br>ton cœur : il devient tout<br>léger ! ❤️</p>
+      </div>
+      <div class="benifit-img">
+        <img src="images/learningZone/stories/tomate/benifit1.png" alt="benifit 1">
+      </div>
+    </div>
 
-            <!-- second collection -->
-            <div id="section12" class="row"
-                style="display: flex; flex-direction: row; justify-content: center; gap: 48px;">
-                <!-- 4 -->
-                <div class="benifit benifit4 col-auto">
-                    <div class="benifit-desc">
-                        <p>Croque-la... et ton ventre<br>brille comme le soleil ! 🌞</p>
-                    </div>
-                    <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit4.png" alt="benifit 4">
-                    </div>
-                </div>
-                <!-- 5 -->
-                <div class="benifit benifit5 col-auto">
-                    <!-- <div class="benifit-desc">
-                    <p>Elle donne de la force à tes<br>jambes: hop, en avant les bottes<br>rouges !</p>
-                </div> -->
-                    <div class="benifit-img logo img-fluid"><img src="images/logo-patarif.png" alt="benifit 5">
-                    </div>
-                </div>
-                <!-- 6 -->
-                <div class="benifit benifit6 col-auto">
-                    <div class="benifit-desc">
-                        <p>Manger une tomate, c’est<br>comme lancer des confettis de<br>bonne humeur ! 🎉</p>
-                    </div>
-                    <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit5.png" alt="benifit 6">
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!-- 2 -->
+    <div class="benifit benifit2">
+      <div class="benifit-desc">
+        <p>Elle donne de la force à tes<br>jambes: hop, en avant les bottes<br>rouges !</p>
+      </div>
+      <div class="benifit-img">
+        <img src="images/learningZone/stories/tomate/benifit2.png" alt="benifit 2">
+      </div>
+    </div>
+
+    <!-- 3 -->
+    <div class="benifit benifit3">
+      <div class="benifit-desc">
+        <p>Elle chasse les petits nuages<br>gris de ton corps. ☁️</p>
+      </div>
+      <div class="benifit-img">
+        <img src="images/learningZone/stories/tomate/benifit3.png" alt="benifit 3">
+      </div>
+    </div>
+  </div>
+
+  <!-- second collection -->
+  <div class="row">
+    <!-- 4 -->
+    <div class="benifit benifit4">
+      <div class="benifit-desc">
+        <p>Croque-la... et ton ventre<br>brille comme le soleil ! 🌞</p>
+      </div>
+      <div class="benifit-img">
+        <img src="images/learningZone/stories/tomate/benifit4.png" alt="benifit 4">
+      </div>
+    </div>
+
+    <!-- 5 (logo) -->
+    <div class="benifit benifit5">
+      <div class="benifit-img logo img-fluid">
+        <img src="images/logo-patarif.png" alt="benifit 5">
+      </div>
+    </div>
+
+    <!-- 6 -->
+    <div class="benifit benifit6">
+      <div class="benifit-desc">
+        <p>Manger une tomate, c’est<br>comme lancer des confettis de<br>bonne humeur ! 🎉</p>
+      </div>
+      <div class="benifit-img">
+        <img src="images/learningZone/stories/tomate/benifit5.png" alt="benifit 6">
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
         <div id="section13" class="section last-shown">
