--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,30 +16,28 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button> -->
+<div id="sideMenu" class="side-menu">
+  <button class="close-btn" (click)="closeSideMenu()"><i class="bi bi-x-lg"></i></button>
+  <ul>
+    <a href="/profile" (click)="closeSideMenu()">
+      <li class="d-flex align-items-center account">
+        <img *ngIf="isLogged" [src]="profileImage || 'images/account.png'" (error)="onImageError($event)"
+          class="dropdown-toggle rounded-circle user-avatar-side" style="width:50px; height:50px; cursor:pointer;"
+          role="button" tabindex="0" (click)="toggleMenu($event)" (keydown.enter)="toggleMenu($event)"
+          [attr.aria-expanded]="menuOpen" alt="User" /> <span class="user-name">{{userName}}</span>
+      </li>
+    </a>
 
-    <div id="sideMenu" class="side-menu">
-      <button class="close-btn" onclick="document.getElementById('sideMenu').classList.remove('open')"><i
-          class="bi bi-x-lg"></i></button>
-      <ul>
-        <a href="/profile">
-          <li class="d-flex align-items-center account">
-            <img [src]="profileImage || 'images/account.png'" (error)="onImageError($event)"
-              class="dropdown-toggle rounded-circle user-avatar" style="width:50px; height:50px; cursor:pointer;"
-              role="button" tabindex="0" (click)="toggleMenu($event)" (keydown.enter)="toggleMenu($event)"
-              [attr.aria-expanded]="menuOpen" alt="User" /> <span class="user-name">{{userName}}</span>
-          </li>
-        </a>
+    <li class="login" *ngIf="!isLogged"><a routerLink="/login" (click)="closeSideMenu()">Login</a></li>
+    <li><a routerLink="/home" (click)="closeSideMenu()">Home</a></li>
+    <li><a routerLink="/learning" (click)="closeSideMenu()">Learning Zone</a></li>
+    <li><a routerLink="/games" (click)="closeSideMenu()">Playground</a></li>
+    <li><a routerLink="/shop" (click)="closeSideMenu()">Shop</a></li>
+    <li><a routerLink="/contact-us" (click)="closeSideMenu()">contact</a></li>
+    <li class="logout" *ngIf="isLogged"><a routerLink="/login" (click)="closeSideMenu()">Logout</a></li>
+  </ul>
+</div>
 
-        <li><a routerLink="/home">Home</a></li>
-        <li><a routerLink="/learning">Learning Zone</a></li>
-        <!-- <li><a routerLink="/stories">Storytime</a></li> -->
-        <li><a routerLink="/games">Playground</a></li>
-        <li><a routerLink="/shop">Shop</a></li>
-        <li><a routerLink="/contact-us">contact</a></li>
-        <li class="logout" *ngIf="isLogged"><a routerLink="/login">Logout</a></li>
-        <!-- <li><a routerLink="/characters">Characters</a></li> -->
-      </ul>
-    </div>
     <!-- Navigation Links -->
     <div class="collapse navbar-collapse justify-content-center" id="mainNavbar">
       <ul class="navbar-nav gap-4">
@@ -78,7 +76,7 @@
           role="button" tabindex="0" (click)="toggleMenu($event)" (keydown.enter)="toggleMenu($event)"
           [attr.aria-expanded]="menuOpen" alt="User" />
 
-        <button *ngIf="!isLogged" class="btn btn-primary" [routerLink]="['/login']">
+        <button *ngIf="!isLogged" class="btn btn-primary login" [routerLink]="['/login']">
           <i class="bi bi-box-arrow-in-right"></i> Login
         </button>
 
