--- a/src/app/components/pages/home/categories/category-card/category-card.component.css
+++ b/src/app/components/pages/home/categories/category-card/category-card.component.css
@@ -74,19 +74,24 @@
 }
 
 .open {
-  margin: 10px 20px 0 0;
-  padding: clamp(0.5rem, 1.5vw, 0.75rem);
+  padding: 2% 1%;
   font-size: clamp(0.75rem, 2vw, 1rem); 
   border: 1px solid white;
   border-radius: 50%;
   width: fit-content;
   visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.open img{
+  width: 70%;
+  object-fit: contain;
 }
 
-
 .card-container:hover .open {
-  background-color: rgba(255, 255, 255, 0.2);
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.062);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.329);
   animation: pulse 2s infinite ease-in-out;
 }
 
