--- a/src/app/components/pages/home/categories/category-card/category-card.component.html
+++ b/src/app/components/pages/home/categories/category-card/category-card.component.html
@@ -7,7 +7,7 @@
     <img [src]="bgIcon" alt="bg icon">
   </div>
   <div class="main-content">
-    <div class="row align-items-center justify-content-between">
+<div class="row align-items-center justify-content-between pe-3">
       <div class="age">3-6 years</div>
       <div class="open"><img src="images/arrowTopRight.png" alt="open"></div>
     </div>
