--- a/src/app/components/pages/learning/stories/banane/banane.component.css
+++ b/src/app/components/pages/learning/stories/banane/banane.component.css
@@ -25,7 +25,9 @@ body {
     height: 100vh;
     z-index: -2;
 }
-
+.cover img{
+    width: 100vw;
+}
 .firstDesc {
     font-size: clamp(1.1rem, 2.5vw, 2rem);
     font-weight: bold;
